--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,7 +2,6 @@ name: Build jar
 
 on:
   workflow_dispatch:
-    branches: [ master ]
 
 jobs:
   build:
@@ -10,11 +9,11 @@ jobs:
     steps:
     - uses: actions/checkout@v3.0.2
     
-    - name: set up JDK 11
+    - name: set up JDK 18
       uses: actions/setup-java@v3.3.0
       with:
-          java-version: '11'
-          distribution: 'adopt'
+          java-version: 18
+          distribution: adopt
           cache: maven
           
     - name: Build with Maven
