--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,9 @@
   information on the Apache Software Foundation, please see
   <http://www.apache.org />.
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>org.beanshell</groupId>
@@ -51,7 +53,8 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    <checkstyle.suppressions.location>src/conf/checkstyle-supressions.xml</checkstyle.suppressions.location>
+    <checkstyle.suppressions.location>src/conf/checkstyle-supressions.xml
+    </checkstyle.suppressions.location>
     <version.jdk>1.8</version.jdk>
     <maven.compiler.source>${version.jdk}</maven.compiler.source>
     <maven.compiler.target>${version.jdk}</maven.compiler.target>
@@ -251,9 +254,9 @@
         <configuration>
           <argLine>-XX:+UseSerialGC ${surefireArgLine}</argLine>
           <systemPropertyVariables>
-            <bsh.debugClasses />
+            <bsh.debugClasses/>
             <accessibility>false</accessibility>
-            <script />
+            <script/>
             <verbose>false</verbose>
             <skip_known_issues>true</skip_known_issues>
           </systemPropertyVariables>
@@ -304,8 +307,6 @@
       </plugin>
     </plugins>
   </build>
-
-
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
@@ -319,7 +320,6 @@
       <version>1.3</version>
       <scope>test</scope>
     </dependency>
-
     <dependency>
       <groupId>javax.servlet</groupId>
       <artifactId>javax.servlet-api</artifactId>
@@ -327,6 +327,15 @@
       <scope>provided</scope>
       <optional>true</optional>
     </dependency>
-
+    <dependency>
+      <groupId>com.linkedin.dexmaker</groupId>
+      <artifactId>dexmaker</artifactId>
+      <version>2.28.3</version>
+    </dependency>
+    <dependency>
+      <groupId>com.jakewharton.android.repackaged</groupId>
+      <artifactId>dalvik-dx</artifactId>
+      <version>11.0.0_r3</version>
+    </dependency>
   </dependencies>
 </project>
